# bizradar

./: .gitignore  README.md  pyproject.toml  requirements.txt
bizradar/: __init__.py  _constants.py  _scraper.py  pyproject.toml  ticker.py
docs/: api.md  examples.md
tests/: conftest.py  test_constants.py  test_helpers.py  test_scraper.py  test_ticker.py
