[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizradar"
version = "0.2.0"
description = "Python library for scraping financial data from BiznesRadar.pl"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["bizradar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
